@@ -126,10 +126,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <release>25</release>
+                    <enablePreview>true</enablePreview>
+                    <parameters>true</parameters>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
-                        <arg>-parameters</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
